--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button onClick="window.open('https://www.freelancer.in/u/syntherat');" type="button" class="frontend-mentor button-item">Freelancer.In</button>
           <button onClick="window.open('https://www.linkedin.com/in/sounak-pal/');" type="button" class="linkedin button-item">LinkedIn</button>
           <button onClick="window.open('https://x.com/sounak_syn');" type="button" class="twitter button-item">Twitter</button>
-          <button onClick="window.open('https://www.instagram.com/sounak.jpg/');" type="button" class="instagram button-item">Instagram</button>
+          <button onClick="window.open('https://www.instagram.com/sounak.mp4/');" type="button" class="instagram button-item">Instagram</button>
         </div>
       </div>
     </div>
