--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p class="myLocation">Kolkata, India</p>
         </div>
         <div class="about">
-          <p class="about-me">"Full Stack Developer and Video Editor"</p>
+          <p class="about-me">"Full Stack Web Developer and Video Editor"</p>
         </div>
         <div class="button-container">
           <button onClick="window.open('http://github.com/syntherat/');" type="button" class="github button-item" target="_blank">GitHub</button>
